@@ -1,6 +1,6 @@
 //
 //  ========================================================================
-//  Copyright (c) 1995-2013 Mort Bay Consulting Pty. Ltd.
+//  Copyright (c) 1995-2014 Mort Bay Consulting Pty. Ltd.
 //  ------------------------------------------------------------------------
 //  All rights reserved. This program and the accompanying materials
 //  are made available under the terms of the Eclipse Public License v1.0
@@ -32,8 +32,6 @@ import java.nio.channels.ReadableByteChannel;
 import java.nio.file.StandardOpenOption;
 import java.security.Permission;
 
-import javax.management.RuntimeErrorException;
-
 import org.eclipse.jetty.util.IO;
 import org.eclipse.jetty.util.URIUtil;
 import org.eclipse.jetty.util.log.Log;
@@ -56,7 +54,7 @@ public class FileResource extends Resource
     /* ------------------------------------------------------------ */
     private final File _file;
     private final String _uri;
-    private final URL _alias;
+    private final URI _alias;
     
     /* -------------------------------------------------------- */
     public FileResource(URL url)
@@ -115,16 +113,7 @@ public class FileResource extends Resource
         {
             // URI and File URI are different.  Is it just an encoding difference?
             if (!file_uri.toString().equals(URIUtil.decodePath(uri.toString())))
-            {
-                try
-                {
-                    _alias=_file.toURI().toURL();
-                }
-                catch (MalformedURLException e)
-                {
-                    throw new IllegalArgumentException(e);
-                }
-            }
+                 _alias=_file.toURI();
             else
                 _alias=checkAlias(_file);
         }
@@ -155,7 +144,7 @@ public class FileResource extends Resource
     }
 
     /* -------------------------------------------------------- */
-    private static URL checkAlias(File file)
+    private static URI checkAlias(File file)
     {
         try
         {
@@ -165,16 +154,19 @@ public class FileResource extends Resource
             if (!abs.equals(can))
             {
                 LOG.debug("ALIAS abs={} can={}",abs,can);
-                return new File(can).toURI().toURL();
+
+                URI alias=new File(can).toURI();
+                // Have to encode the path as File.toURI does not!
+                return new URI("file://"+URIUtil.encodePath(alias.getPath()));  
             }
         }
-        catch(IOException e)
+        catch(Exception e)
         {
             LOG.warn("bad alias for {}: {}",file,e.toString());
             LOG.debug(e);
             try
             {
-                return new URL("http://eclipse.org/bad/canonical/alias");
+                return new URI("http://eclipse.org/bad/canonical/alias");
             }
             catch(Exception e2)
             {
@@ -225,7 +217,7 @@ public class FileResource extends Resource
     
     /* ------------------------------------------------------------ */
     @Override
-    public URL getAlias()
+    public URI getAlias()
     {
         return _alias;
     }
@@ -420,6 +412,12 @@ public class FileResource extends Resource
         {
             throw new IllegalStateException(e);
         }
+    }
+    
+    @Override
+    public URI getURI()
+    {
+        return _file.toURI();
     }
 
     @Override
